--- a/templates/home.html
+++ b/templates/home.html
@@ -624,7 +624,6 @@ input[type="time"][data-has-value="true"]::-webkit-datetime-edit-ampm-field {
         <!-- Search Tabs -->
         <div class="search-tabs">
             <button type="button" class="search-tab active" data-tab="hourly" onclick="switchTab('hourly')">Theo giờ</button>
-            <button type="button" class="search-tab" data-tab="overnight" onclick="switchTab('overnight')">Qua đêm</button>
             <button type="button" class="search-tab" data-tab="daily" onclick="switchTab('daily')">Theo ngày</button>
             </div>
         
@@ -797,73 +796,7 @@ input[type="time"][data-has-value="true"]::-webkit-datetime-edit-ampm-field {
                 <div class="col-xxl-1 col-xl-1 col-lg-12 col-md-6 search-btn-col d-flex justify-content-center">
                     <button type="submit" class="btn search-btn" style="white-space: nowrap; min-width: 100px;">Tìm kiếm</button>
                 </div>
-            </div>
-        </form>
-        
-        <!-- Overnight Search Form -->
-        <form class="search-form overnight-form" id="overnight-form" action="{{ url_for('renter.search') }}" method="GET">
-            <input type="hidden" name="booking_type" value="overnight">
-            <div class="row g-2 align-items-end">
-                <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                    <label for="location-overnight" class="form-label">Địa điểm hoặc tên homestay</label>
-                    <div class="location-selector">
-                        <input type="text" class="form-control location-input" id="location-overnight" name="location" 
-                               placeholder="Nhập hoặc chọn địa điểm" autocomplete="off">
-                        <div class="location-dropdown" id="location-dropdown-overnight">
-                            <!-- Options will be loaded dynamically from API -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3">
-                    <label for="checkin-overnight" class="form-label">Ngày nhận phòng</label>
-                    <div class="date-input-wrapper">
-                        <input type="date" class="form-control" id="checkin-overnight" name="checkin_date">
-                        <div class="custom-placeholder" data-for="checkin-overnight">Chọn ngày nhận phòng</div>
-                    </div>
-                </div>
-                <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-3">
-                    <label for="checkout-overnight" class="form-label">Ngày trả phòng</label>
-                    <div class="date-input-wrapper">
-                        <input type="date" class="form-control" id="checkout-overnight" name="checkout_date">
-                        <div class="custom-placeholder" data-for="checkout-overnight">Chọn ngày trả phòng</div>
-                    </div>
-                </div>
-                <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6">
-                    <label for="guests-homes-overnight" class="form-label">Khách</label>
-                    <div class="guest-selector">
-                        <input type="text" class="form-control guest-display" id="guests-homes-overnight" name="guests_homes" 
-                               value="1 người lớn, 0 Trẻ em" readonly>
-                        <div class="guest-dropdown" id="guest-dropdown-overnight">
-                            <div class="guest-row">
-                                <div class="guest-info">
-                                    <i class="bi bi-person-fill text-success"></i>
-                                    <span>Người lớn</span>
-                                </div>
-                                <div class="guest-controls">
-                                    <button type="button" class="btn-decrease" data-target="adults">−</button>
-                                    <span class="guest-count" id="adults-count-overnight">1</span>
-                                    <button type="button" class="btn-increase" data-target="adults">+</button>
-                                </div>
-                            </div>
-                            <div class="guest-row">
-                                <div class="guest-info">
-                                    <i class="bi bi-person text-success"></i>
-                                    <span>Trẻ em</span>
-                                </div>
-                                <div class="guest-controls">
-                                    <button type="button" class="btn-decrease" data-target="children">−</button>
-                                    <span class="guest-count" id="children-count-overnight">0</span>
-                                    <button type="button" class="btn-increase" data-target="children">+</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xxl-1 col-xl-1 col-lg-12 col-md-6 search-btn-col">
-                    <button type="submit" class="btn search-btn w-100">Tìm kiếm</button>
-                </div>
-            </div>
-        </form>
+            </div>        </form>
         
         <!-- Daily Search Form -->
         <form class="search-form daily-form" id="daily-form" action="{{ url_for('renter.search') }}" method="GET">
@@ -1145,48 +1078,36 @@ function switchTab(tabType) {
     console.log('SWITCH TAB CALLED: ' + tabType);
     
     var hourlyTab = document.querySelector('[data-tab="hourly"]');
-    var overnightTab = document.querySelector('[data-tab="overnight"]');
     var dailyTab = document.querySelector('[data-tab="daily"]');
     var hourlyForm = document.getElementById('hourly-form');
-    var overnightForm = document.getElementById('overnight-form');
     var dailyForm = document.getElementById('daily-form');
     
     console.log('Found elements:', {
         hourlyTab: !!hourlyTab,
-        overnightTab: !!overnightTab,
         dailyTab: !!dailyTab, 
         hourlyForm: !!hourlyForm,
-        overnightForm: !!overnightForm,
         dailyForm: !!dailyForm
     });
     
     // Remove active from all tabs
     if (hourlyTab) hourlyTab.classList.remove('active');
-    if (overnightTab) overnightTab.classList.remove('active');
     if (dailyTab) dailyTab.classList.remove('active');
     
     // Remove active from all forms
     if (hourlyForm) hourlyForm.classList.remove('active');
-    if (overnightForm) overnightForm.classList.remove('active');
     if (dailyForm) dailyForm.classList.remove('active');
     
-    if (tabType === 'daily') {
-        if (dailyTab) dailyTab.classList.add('active');
-        if (dailyForm) {
-            dailyForm.classList.add('active');
-            console.log('SUCCESS: DAILY FORM IS NOW ACTIVE');
-        }
-    } else if (tabType === 'overnight') {
-        if (overnightTab) overnightTab.classList.add('active');
-        if (overnightForm) {
-            overnightForm.classList.add('active');
-            console.log('SUCCESS: OVERNIGHT FORM IS NOW ACTIVE');
-        }
-    } else if (tabType === 'hourly') {
+    if (tabType === 'hourly') {
         if (hourlyTab) hourlyTab.classList.add('active');
         if (hourlyForm) {
             hourlyForm.classList.add('active');
             console.log('SUCCESS: HOURLY FORM IS NOW ACTIVE');
+        }
+    } else if (tabType === 'daily') {
+        if (dailyTab) dailyTab.classList.add('active');
+        if (dailyForm) {
+            dailyForm.classList.add('active');
+            console.log('SUCCESS: DAILY FORM IS NOW ACTIVE');
         }
     }
     
@@ -1445,17 +1366,13 @@ document.addEventListener('DOMContentLoaded', function() {
         console.log('Setting up tabs...');
         
         var hourlyTab = document.querySelector('[data-tab="hourly"]');
-        var overnightTab = document.querySelector('[data-tab="overnight"]');
         var dailyTab = document.querySelector('[data-tab="daily"]');
         var hourlyForm = document.getElementById('hourly-form');
-        var overnightForm = document.getElementById('overnight-form');
         var dailyForm = document.getElementById('daily-form');
         
         console.log('Hourly tab:', hourlyTab);
-        console.log('Overnight tab:', overnightTab);
         console.log('Daily tab:', dailyTab);
         console.log('Hourly form:', hourlyForm);
-        console.log('Overnight form:', overnightForm);
         console.log('Daily form:', dailyForm);
         
         if (hourlyTab) {
@@ -1464,12 +1381,10 @@ document.addEventListener('DOMContentLoaded', function() {
                 
                 // Remove active from all tabs
                 if (hourlyTab) hourlyTab.classList.remove('active');
-                if (overnightTab) overnightTab.classList.remove('active');
                 if (dailyTab) dailyTab.classList.remove('active');
                 
                 // Remove active from all forms
                 if (hourlyForm) hourlyForm.classList.remove('active');
-                if (overnightForm) overnightForm.classList.remove('active');
                 if (dailyForm) dailyForm.classList.remove('active');
                 
                 // Add active to hourly tab and form
@@ -1483,43 +1398,16 @@ document.addEventListener('DOMContentLoaded', function() {
             };
         }
         
-        if (overnightTab) {
-            overnightTab.onclick = function() {
-                console.log('OVERNIGHT TAB CLICKED!');
-                
-                // Remove active from all tabs
-                if (hourlyTab) hourlyTab.classList.remove('active');
-                if (overnightTab) overnightTab.classList.remove('active');
-                if (dailyTab) dailyTab.classList.remove('active');
-                
-                // Remove active from all forms
-                if (hourlyForm) hourlyForm.classList.remove('active');
-                if (overnightForm) overnightForm.classList.remove('active');
-                if (dailyForm) dailyForm.classList.remove('active');
-                
-                // Add active to overnight tab and form
-                overnightTab.classList.add('active');
-                if (overnightForm) {
-                    overnightForm.classList.add('active');
-                    console.log('Overnight form activated');
-                }
-                
-                return false;
-            };
-        }
-        
         if (dailyTab) {
             dailyTab.onclick = function() {
                 console.log('DAILY TAB CLICKED!');
                 
                 // Remove active from all tabs
                 if (hourlyTab) hourlyTab.classList.remove('active');
-                if (overnightTab) overnightTab.classList.remove('active');
                 if (dailyTab) dailyTab.classList.remove('active');
                 
                 // Remove active from all forms
                 if (hourlyForm) hourlyForm.classList.remove('active');
-                if (overnightForm) overnightForm.classList.remove('active');
                 if (dailyForm) dailyForm.classList.remove('active');
                 
                 // Add active to daily tab and form
@@ -1545,13 +1433,6 @@ document.addEventListener('DOMContentLoaded', function() {
         
         // Hourly form is handled by setupDateTimeSelector function
         
-        // Set for overnight form
-        const checkinOvernight = document.getElementById('checkin-overnight');
-        const checkoutOvernight = document.getElementById('checkout-overnight');
-        
-        if (checkinOvernight) checkinOvernight.value = today;
-        if (checkoutOvernight) checkoutOvernight.value = tomorrowStr;
-        
         // Set for daily form
         const checkinDaily = document.getElementById('checkin-daily');
         const checkoutDaily = document.getElementById('checkout-daily');
@@ -1562,7 +1443,6 @@ document.addEventListener('DOMContentLoaded', function() {
     
     // Setup guest selectors for all forms
     setupGuestSelector('hourly');
-    setupGuestSelector('overnight');
     setupGuestSelector('daily');
     
     // Setup datetime selector for hourly form
@@ -1572,7 +1452,6 @@ document.addEventListener('DOMContentLoaded', function() {
     console.log('Starting location autocomplete setup...');
     setTimeout(function() {
         setupLocationAutocomplete('hourly');
-        setupLocationAutocomplete('overnight');
         setupLocationAutocomplete('daily');
     }, 100);
     
@@ -1604,11 +1483,9 @@ document.addEventListener('DOMContentLoaded', function() {
         
         // Setup other components
         setupGuestSelector('hourly');
-        setupGuestSelector('overnight');
         setupGuestSelector('daily');
         setupDateTimeSelector();
         setupLocationAutocomplete('hourly');
-        setupLocationAutocomplete('overnight');
         setupLocationAutocomplete('daily');
         
         console.log('Setup completed');
@@ -1714,22 +1591,8 @@ document.addEventListener('DOMContentLoaded', function() {
         }
     }
     
-    // Initialize decrease button states for both forms
-    function initializeButtonStates(formType) {
-        const adultsCount = document.getElementById(`adults-count-${formType}`);
-        const childrenCount = document.getElementById(`children-count-${formType}`);
-        
-        if (adultsCount && parseInt(adultsCount.textContent) <= 1) {
-            document.querySelector(`#guest-dropdown-${formType} [data-target="adults"].btn-decrease`).disabled = true;
-        }
-        if (childrenCount && parseInt(childrenCount.textContent) <= 0) {
-            document.querySelector(`#guest-dropdown-${formType} [data-target="children"].btn-decrease`).disabled = true;
-        }
-    }
-    
     // Initialize for all forms
     initializeButtonStates('hourly');
-    initializeButtonStates('overnight');
     initializeButtonStates('daily');
     
     // Track initialized forms to avoid duplicate setup
