--- a/templates/admin/owner_detail.html
+++ b/templates/admin/owner_detail.html
@@ -596,7 +596,7 @@ nav.navbar {
                             <tr>
                                 <td>{{ room.name }}</td>
                                 <td>{{ format_full_address(room.address, None, room.district, room.city) }}</td>
-                                <td>{{ '{:,.0f}'.format(room.price_per_night|float) }} VNĐ</td>
+                                <td>{{ '{:,.0f}'.format(room.price_per_night|float) }} VND</td>
                                 <td>
                                     <span class="badge {% if room.is_available %}badge-success{% else %}badge-inactive{% endif %}">
                                         {{ 'Còn trống' if room.is_available else 'Đã đặt' }}
@@ -662,7 +662,7 @@ nav.navbar {
                                 <td>{{ payment.transaction_id }}</td>
                                 <td>{{ payment.created_at.strftime('%d/%m/%Y') }}</td>
                                 <td>{{ payment.type }}</td>
-                                <td>{{ '{:,.0f}'.format(payment.amount|float) }} VNĐ</td>
+                                <td>{{ '{:,.0f}'.format(payment.amount|float) }} VND</td>
                                 <td>
                                     <span class="badge {% if payment.status == 'success' %}badge-success{% elif payment.status == 'pending' %}badge-warning{% else %}badge-inactive{% endif %}">
                                         {{ payment.status|title }}
