--- a/templates/owner/dashboard.html
+++ b/templates/owner/dashboard.html
@@ -699,16 +699,16 @@
                         <span>
                             {% if home.price_first_2_hours and home.price_first_2_hours > 0 %}
                                 {% if home.price_per_day and home.price_per_day > 0 %}
-                                    {{ "{:,.0f}".format(home.price_first_2_hours) }}đ /2h, {{ "{:,.0f}".format(home.price_per_day) }}đ /ngày
+                                    {{ "{:,.0f}".format(home.price_first_2_hours) }} VND /2h, {{ "{:,.0f}".format(home.price_per_day) }} VND /ngày
                                 {% else %}
-                                    {{ "{:,.0f}".format(home.price_first_2_hours) }}đ /2h đầu
+                                    {{ "{:,.0f}".format(home.price_first_2_hours) }} VND /2h đầu
                                 {% endif %}
                             {% elif home.price_per_day and home.price_per_day > 0 %}
-                                {{ "{:,.0f}".format(home.price_per_day) }}đ /ngày
+                                {{ "{:,.0f}".format(home.price_per_day) }} VND /ngày
                             {% elif home.price_per_hour and home.price_per_hour > 0 %}
-                                {{ "{:,.0f}".format(home.price_per_hour) }}đ /giờ
+                                {{ "{:,.0f}".format(home.price_per_hour) }} VND /giờ
                             {% elif home.price_per_night and home.price_per_night > 0 %}
-                                {{ "{:,.0f}".format(home.price_per_night) }}đ /ngày
+                                {{ "{:,.0f}".format(home.price_per_night) }} VND /ngày
                             {% else %}
                                 Chưa có giá
                             {% endif %}
